# crispy-computing-machine

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
CellularSimulationEngine/: cell.h  engine.cpp  engine.h  plane.cpp  plane.h
SimPainter/: painter.cpp  painter.h  painter_example.cpp
SimulationEngine/: cell.cpp  cell.h  engine.cpp  engine.h  plane.cpp  plane.h
sfml_window/: view.cpp  view.h  window.cpp  window.h
